# toy-simulator

./: .gitignore  CMakeLists.txt  README.md  fib.asm
cmake/flags/: CMakeLists.txt
src/: config.hpp  cpu.cpp  cpu.hpp  instructions.hpp  simulator.cpp  simulator.hpp
src/asm/: assembler.rb  run_assembler.rb
